# BigOS

./: .clang-format  .gitignore  CMakePresets.json  LICENSE  Makefile  README.md  mkdocs.yml
.github/workflows/: build.yml  check-whitespace.yml  deploy.yml
CMake/: CommonConfig.cmake  riscv64-cmake-toolchain.cmake
CMake/toolchains/: riscv64-clang.cmake  riscv64-common.cmake  riscv64-gcc.cmake
Make/: common.mk  common_lib.mk
Markdown/: acronyms.md
docs/: Doxyfile  about.md  acronyms.md  contributing_rules.md  showcase.md
docs/build_system/: index.md  targets.md
docs/doxygen/: groups.dox
docs/source/: conf.py  index.rst
docs/vfs/: Kompot.md
include/debug/: debug_stdio.h
scripts/: check-whitespaces.sh
src/: Makefile
src/bootstrap/: CMakeLists.txt  bootstrap_memory_allocator.c  bootstrap_memory_allocator.h  bootstrap_memory_services.c  bootstrap_memory_services.h  bootstrap_page_table.c  bootstrap_page_table.h  bootstrap_panic.c  bootstrap_panic.h  kbootstrap.c  kinit.s  linker.ld
src/kernel/: CMakeLists.txt  kbootstrap.c  kernel_config.c  kernel_config.h  kinit.c  kinit.s  klog.c  klog.h  kmain.c  kmalloc.c  kmalloc.h  linker.ld  power.c  power.h  ram_map.c  ram_map.h  test_trap_vector.s
src/kernel/bootstrap/: CMakeLists.txt  kbootstrap.c
src/kernel/devtree/: devtree_access.c  devtree_access.h  devtree_header.c  devtree_header.h  devtree_parser.c  devtree_parser.h  devtree_types.h  types.h
src/kernel/devtree/blob/: access.c  access.h  header.c  header.h  interactive_entity.c  interactive_entity.h  interactive_entity_internal.c  interactive_entity_internal.h  parser.c  parser.h
src/kernel/hal/: hal.c  hal_interface.h
src/kernel/hal/arch/riscv/: hal.c  irq.c  timer.c  vmem.c
src/kernel/hal/inlcude/: hal.h
src/kernel/logging/: klog.c  klog.h
src/kernel/memory_management/: address_space_manager.c  address_space_manager.h  mm_types.h  page_table.c  page_table.h  physical_memory_manager.c  physical_memory_manager.h  virtual_memory_manager.c
src/kernel/memory_management/include/: common_types.h
src/kernel/memory_management/include/physical_memory/: manager.h
src/kernel/memory_management/physical_memory/: allocator.c  allocator.h  manager.c
src/kernel/memory_managment/: address_space_manager.c  address_space_manager.h  mm_types.c  mm_types.h  page_table.c  page_table.h  physical_memory_manager.c  physical_memory_manager.h  virtual_memory_managment.c  virtual_memory_managment.h
src/kernel/vfs/: CMakeLists.txt  file_table.c  file_table.h  kompot_deserialize.c  kompot_serialize.c  mount_tree.c  mount_tree.h  pipes.c  pipes.h  vfs.c  vfs.h  vfs_alloc.h
src/kernel/virtual_memory/: address_space.h  mm_common.c  mm_common.h  page_table.c  page_table.h  page_table_entry.c  page_table_entry.h  pmm.c  pmm.h  ram_map.c  vmm.c  vmm.h
(+90 files in other folders)
